Changed webserver from Jetty to MuServer. This is a breaking change only because the openapi json is now using version 3 (so Swagger UI etc may need upgrading).